--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,33 @@
+<!-- <header>
+<div class="header-content">
+<div class="header-content-inner">
+<h1>Your Favorite Source of Free Bootstrap Themes</h1>
+<hr>
+<p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+<a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+</div>
+</div>
+</header> -->
+
 <header>
-    <div class="header-content">
-        <div class="header-content-inner">
-            <h1>Your Favorite Source of Free Bootstrap Themes</h1>
-            <hr>
-            <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-            <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+  <div class="header-content">
+    <!-- <div class="jumbotron"> -->
+      <div class="header-content-inner">
+      <div class="row">
+        <div class="col-md-4 col-md-offset-2">
+          <a href="#"> <img src="./images/yourLogoTemplate.png" class="img-responsive center-block" alt="StandardName"></a>
         </div>
+        <div class="col-md-4">
+          <a href="http://www.opengeospatial.org"> <img src="./images/OGC_Logo_2D_Blue_x_0_0.png" class="img-responsive center-block" alt="OGC"></a>
+        </div>
+      </div>
+      <br>
+      <p class="text-center">StandardName is an open standardised data model and exchange format to store digital 3D models of cities and landscapes. It is implemented as an application schema for GML3, and it is an official international standards of the OGC.</p>
+      <div class="text-center">
+        <a href="#" class="btn btn-primary btn-lg">Download StandardName (v2.0)</a>
+        <a href="#" class="btn btn-primary btn-lg">Download schemas (v2.0)</a>
+      </div>
     </div>
+    <!-- </div> -->
+  </div>
 </header>
