--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,13 +15,19 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
+                    <!-- <a class="page-scroll" href="#services">Services</a> -->
+                    <a class="page-scroll" href="#tutorials">Tutorials</a>
+                </li>
+                <li>
                     <a class="page-scroll" href="#about">About</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#services">Services</a>
+                    <!-- <a class="page-scroll" href="#portfolio">Portfolio</a> -->
+                    <a class="page-scroll" href="#examples">Examples</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#portfolio">Portfolio</a>
+                    <!-- <a class="page-scroll" href="#contact">Contact</a> -->
+                    <a class="page-scroll" href="#applications">Applications</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
