--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -7,8 +7,11 @@
   {% include nav.html %}
   {% include header.html %}
   {% include call-to-action.html %}
-  {% include services.html %}
-  {% include portfolio.html %}
+  <!-- {% include services.html %} -->
+  <!-- {% include portfolio.html %} -->
+  {% include examples.html %}
+  {% include tutorials.html %}
+  {% include applications.html %}
   {% include aside.html %}
   {% include contact.html %}
   {% include scripts.html %}
